--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy >= 1.1, < 2.0
-scipy >= 0.13, < 0.17
-pandas >= 0.13, < 0.18
-scikit-learn >= 0.17, < 0.18
+scipy >= 1.8.0
+pandas >= 1.4.1
+scikit-learn >= 1.02
 nose >= 1.3.1, < 1.4
-nolearn == 0.5b1
+nolearn >= 0.6.1
